libs/natparse/src/test/resources/projects/invalidModuleTypeTests/Natural-Libraries/ALIB/FETCHPRG.NSP
DEFINE DATA LOCAL
END-DEFINE

FETCH 'FETCHSUB'

END
